; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/planner/extr_extended_op_node_utils.c_ExtendedOpNodeContainsRepartitionSubquery.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/planner/extr_extended_op_node_utils.c_ExtendedOpNodeContainsRepartitionSubquery.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MultiTable = common dso_local global i32 0, align 4
@MultiCollect = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @ExtendedOpNodeContainsRepartitionSubquery to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ExtendedOpNodeContainsRepartitionSubquery(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call i32* @ParentNode(i32* %6)
  store i32* %7, i32** %4, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = call i32* @ChildNode(i32* %8)
  store i32* %9, i32** %5, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = load i32, i32* @MultiTable, align 4
  %12 = call i64 @CitusIsA(i32* %10, i32 %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %20

14:                                               ; preds = %1
  %15 = load i32*, i32** %5, align 8
  %16 = load i32, i32* @MultiCollect, align 4
  %17 = call i64 @CitusIsA(i32* %15, i32 %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %14
  store i32 1, i32* %2, align 4
  br label %21

20:                                               ; preds = %14, %1
  store i32 0, i32* %2, align 4
  br label %21

21:                                               ; preds = %20, %19
  %22 = load i32, i32* %2, align 4
  ret i32 %22
}

declare dso_local i32* @ParentNode(i32*) #1

declare dso_local i32* @ChildNode(i32*) #1

declare dso_local i64 @CitusIsA(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
